--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,14 +9,18 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - name: Download
-        run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
+      - name: Download ngrok
+        run: |
+          Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
+          Expand-Archive -Path ngrok.zip -DestinationPath ngrok
+          rm ngrok.zip
+          mv ngrok/ngrok.exe ngrok.exe
 
-      - name: Extract
-        run: Expand-Archive -Path ngrok.zip -DestinationPath ngrok
+      - name: Update ngrok agent
+        run: .\ngrok.exe update
 
-      - name: Auth
-        run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
+      - name: Authenticate
+        run: .\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
 
         env:
           NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
@@ -30,4 +34,4 @@ jobs:
         run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
 
       - name: Create Tunnel
-        run: .\ngrok\ngrok.exe tcp 3389
+        run: .\ngrok.exe tcp 3389
