--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,10 @@ jobs:
           mv ngrok/ngrok.exe ngrok.exe
 
       - name: Update ngrok agent
-        run: .\ngrok.exe update
+        run: |
+          .\ngrok.exe update
+          .\ngrok.exe config upgrade
+          .\ngrok.exe config check
 
       - name: Authenticate
         run: .\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
