--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
           Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok_latest.zip
           Expand-Archive -Path ngrok_latest.zip -DestinationPath ngrok_tmp
           rm ngrok_latest.zip
+          rm ngrok.exe  # Remove the existing ngrok executable
           mv ngrok_tmp/ngrok.exe ngrok.exe
           rm -r ngrok_tmp
 
